--- a/算法刷题.md
+++ b/算法刷题.md
@@ -1,3 +1,4 @@
 
-[beats 100%的霜神](https://books.halfrost.com/leetcode/)
+- [beats 100%的霜神](https://books.halfrost.com/leetcode/)
 
+- [代码随想录](https://programmercarl.com/)
